[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/fase 2/Fase fios.gd" type="Script" id=1]
[ext_resource path="res://sprites/fase_dos_fios-Sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/fase 3/minigame/Sprite.gd" type="Script" id=3]
[ext_resource path="res://sprites/button play.png" type="Texture" id=4]
[ext_resource path="res://sprites/pausar .png" type="Texture" id=5]
[ext_resource path="res://sprites/button casinha .png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]
0/name = "fase_dos_fios-Sheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 363, 637 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Fase fios" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="Fundo"]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="Connecteds" type="Node" parent="Fundo"]

[node name="ConnectRed" type="ColorRect" parent="Fundo/Connecteds"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 62.0
margin_top = 329.0
margin_right = 369.0
margin_bottom = 345.0
rect_rotation = -35.8314
color = Color( 1, 0, 0, 1 )

[node name="ConnectYellow" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 45.0
margin_top = 206.0
margin_right = 340.0
margin_bottom = 222.0
rect_rotation = 22.8333
color = Color( 1, 0.984314, 0, 1 )

[node name="ConnectBlue" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 43.0
margin_top = 293.0
margin_right = 336.0
margin_bottom = 309.0
rect_rotation = -21.8211
color = Color( 0, 0.0862745, 1, 1 )

[node name="ConnectWhite" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 38.0
margin_top = 384.0
margin_right = 418.0
margin_bottom = 400.0
rect_rotation = -44.5892

[node name="erros" type="Node" parent="."]

[node name="vida11" type="ColorRect" parent="erros"]
margin_left = 183.0
margin_top = 441.0
margin_right = 192.0
margin_bottom = 498.0
rect_rotation = -30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida12" type="ColorRect" parent="erros"]
margin_left = 213.0
margin_top = 436.0
margin_right = 222.0
margin_bottom = 496.0
rect_rotation = 30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida21" type="ColorRect" parent="erros"]
margin_left = 243.0
margin_top = 440.0
margin_right = 252.0
margin_bottom = 497.0
rect_rotation = -30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida22" type="ColorRect" parent="erros"]
margin_left = 273.0
margin_top = 435.0
margin_right = 282.0
margin_bottom = 495.0
rect_rotation = 30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida31" type="ColorRect" parent="erros"]
margin_left = 303.0
margin_top = 440.0
margin_right = 312.0
margin_bottom = 497.0
rect_rotation = -30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida32" type="ColorRect" parent="erros"]
margin_left = 333.0
margin_top = 435.0
margin_right = 342.0
margin_bottom = 495.0
rect_rotation = 30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="Fios" type="Node" parent="."]

[node name="F_red" type="ColorRect" parent="Fios"]
margin_left = -51.0
margin_top = 321.0
margin_right = -21.0
margin_bottom = 341.0
color = Color( 1, 0, 0, 1 )

[node name="Red" type="Button" parent="Fios/F_red"]
margin_left = 111.0
margin_top = -6.0
margin_right = 126.0
margin_bottom = 24.0

[node name="F_yellow" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 205.0
margin_right = 50.0
margin_bottom = 225.0
color = Color( 1, 0.984314, 0, 1 )

[node name="Yellow" type="Button" parent="Fios/F_yellow"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_blue" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 290.0
margin_right = 50.0
margin_bottom = 310.0
color = Color( 0, 0.0862745, 1, 1 )

[node name="Blue" type="Button" parent="Fios/F_blue"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_white" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 375.0
margin_right = 50.0
margin_bottom = 395.0

[node name="White" type="Button" parent="Fios/F_white"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="terminais" type="Node" parent="."]

[node name="term1GB" type="ColorRect" parent="terminais"]
margin_left = 296.0
margin_top = 42.0
margin_right = 339.0
margin_bottom = 72.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="1GB" type="Button" parent="terminais/term1GB"]
margin_left = 3.0
margin_top = 6.0
margin_right = 42.0
margin_bottom = 26.0
text = "1GB"

[node name="term500" type="ColorRect" parent="terminais"]
margin_left = 381.0
margin_top = 171.0
margin_right = 427.0
margin_bottom = 201.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="500" type="Button" parent="terminais/term500"]
margin_left = 5.0
margin_top = 3.0
margin_right = 41.0
margin_bottom = 23.0
text = "500"

[node name="term 200" type="ColorRect" parent="terminais"]
margin_left = 296.0
margin_top = 171.0
margin_right = 337.0
margin_bottom = 201.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="300" type="Button" parent="terminais/term 200"]
margin_left = 4.0
margin_top = 9.0
margin_right = 40.0
margin_bottom = 29.0
text = "300"

[node name="term400" type="ColorRect" parent="terminais"]
margin_left = 294.0
margin_top = 237.0
margin_right = 340.0
margin_bottom = 267.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="400" type="Button" parent="terminais/term400"]
margin_left = 6.0
margin_top = 6.0
margin_right = 42.0
margin_bottom = 26.0
text = "400"

[node name="term100" type="ColorRect" parent="terminais"]
margin_left = 288.0
margin_top = 108.0
margin_right = 332.0
margin_bottom = 138.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="100" type="Button" parent="terminais/term100"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 24.0
text = "200"

[node name="Again" type="Node" parent="."]

[node name="AgainFundo" type="ColorRect" parent="Again"]
visible = false
margin_left = 21.0
margin_top = 156.0
margin_right = 339.0
margin_bottom = 267.0

[node name="AgainText" type="Label" parent="Again"]
visible = false
margin_left = 111.0
margin_top = 165.0
margin_right = 261.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Tentar novamente?"

[node name="AgainButton" type="Button" parent="Again"]
visible = false
margin_left = 108.0
margin_top = 201.0
margin_right = 240.0
margin_bottom = 237.0
text = "Sim"

[node name="FundoPause" type="Sprite" parent="."]
pause_mode = 2
visible = false
z_index = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="FundoPause"]
margin_left = -1.0
margin_top = -3.0
margin_right = 387.0
margin_bottom = 659.0
color = Color( 0.611765, 0.67451, 0.705882, 1 )

[node name="Button3" type="Button" parent="FundoPause"]
margin_left = 219.0
margin_top = 98.0
margin_right = 7143.0
margin_bottom = 7016.0
rect_scale = Vector2( 0.0126425, 0.0126425 )
icon = ExtResource( 6 )

[node name="Button2" type="Button" parent="FundoPause"]
margin_left = 78.0
margin_top = 100.0
margin_right = 7040.0
margin_bottom = 7018.0
rect_scale = Vector2( 0.0124347, 0.0124347 )
text = "voltar"
icon = ExtResource( 4 )

[node name="HSlider" type="HSlider" parent="FundoPause"]
margin_left = 77.0
margin_top = 241.0
margin_right = 317.0
margin_bottom = 270.0

[node name="Label" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 136.0
margin_top = 295.0
margin_right = 222.0
margin_bottom = 309.0

[node name="Label2" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 77.0
margin_top = 360.0
margin_right = 323.0
margin_bottom = 397.0

[node name="Pausar" type="Button" parent="."]
margin_left = 299.0
margin_top = 11.0
margin_right = 7267.0
margin_bottom = 6929.0
rect_scale = Vector2( 0.00596626, 0.00596626 )
text = "pausar"
icon = ExtResource( 5 )

[connection signal="pressed" from="Fios/F_red/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Fios/F_yellow/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="Fios/F_blue/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Fios/F_white/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="terminais/term1GB/1GB" to="." method="_on_1GB_pressed"]
[connection signal="pressed" from="terminais/term500/500" to="." method="_on_500_pressed"]
[connection signal="pressed" from="terminais/term 200/300" to="." method="_on_300_pressed"]
[connection signal="pressed" from="terminais/term400/400" to="." method="_on_400_pressed"]
[connection signal="pressed" from="terminais/term100/100" to="." method="_on_100_pressed"]
[connection signal="pressed" from="Again/AgainButton" to="." method="_on_AgainButton_pressed"]
[connection signal="pressed" from="FundoPause/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="FundoPause/Button2" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="FundoPause/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Pausar" to="." method="_on_Pausar_pressed"]
